--- a/AboutUs.html
+++ b/AboutUs.html
@@ -178,7 +178,7 @@
       var imageRemovebgPreview11 = document.getElementById("imageRemovebgPreview11");
       if (imageRemovebgPreview11) {
         imageRemovebgPreview11.addEventListener("click", function (e) {
-          window.location.href = "./Home.html";
+          window.location.href = "./index.html";
         });
       }
       
